--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/react-dom": "^19.2.2",
     "astro": "^5.15.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.0",
