--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
   "compilerOptions": {
     "types": ["./worker-configuration.d.ts", "node"],
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "#/src/*": ["src/*"]
+    }
   }
 }
