--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate:local": "wrangler d1 migrations apply makemeet-dev-db --local",
     "migrate:prod": "wrangler d1 migrations apply makemeet-dev-db",
     "db:count:users": "wrangler d1 execute makemeet-dev-db --local --command \"SELECT COUNT(*) AS cnt FROM users;\"",
-    "db:count:events": "wrangler d1 execute makemeet-dev-db --local --command \"SELECT COUNT(*) AS cnt FROM events;\""
+    "db:count:meetings": "wrangler d1 execute makemeet-dev-db --local --command \"SELECT COUNT(*) AS cnt FROM meetings;\""
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
