--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cf-typegen": "wrangler types",
     "test": "vitest",
     "migrate:local": "wrangler d1 migrations apply makemeet-dev-db --local",
-    "migrate:prod": "wrangler d1 migrations apply makemeet-dev-db",
+    "migrate:prod": "wrangler d1 migrations apply makemeet-dev-db --remote",
     "db:count:users": "wrangler d1 execute makemeet-dev-db --local --command \"SELECT COUNT(*) AS cnt FROM users;\"",
     "db:count:meetings": "wrangler d1 execute makemeet-dev-db --local --command \"SELECT COUNT(*) AS cnt FROM meetings;\""
   },
