--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "astro": "^5.15.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "zod": "^4.1.12"
