--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,3 +1,13 @@
 {
-  "preferred_line_length": 80
+  "preferred_line_length": 80,
+  "prettier": {
+    "allowed": false
+  },
+  "formatter": {
+    "language_server": { "name": "biome" }
+  },
+  "code_actions_on_format": {
+    "source.fixAll.biome": true,
+    "source.organizeImports.biome": true
+  }
 }
