--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -33,7 +33,7 @@
       "database_id": "233908bb-4e4f-4216-9a1f-606ef1d8ab89",
       "migrations_dir": "./drizzle/"
     }
-  ]
+  ],
   /**
    * Environment Variables
    * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
@@ -53,4 +53,28 @@
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
    */
   // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+  "env": {
+    // This is for a deployment of the main branch. samuel-skean manages this deployment under his cloudflare account.
+    "main_samuel_skean": {
+      "d1_databases": [
+        {
+          "binding": "DB",
+          "database_name": "makemeet-main-db",
+          "database_id": "d567d18f-b135-482a-82e8-9b48b3b1de69",
+          "migrations_dir": "./drizzle/"
+        }
+      ]
+    },
+    // This is for a deployment of the `dev` branch. samuel-skean manages this deployment under his cloudflare account.
+    "dev_samuel_skean": {
+      "d1_databases": [
+        {
+          "binding": "DB",
+          "database_name": "makemeet-dev-db",
+          "database_id": "13b9fd3f-5d2b-4a22-99fd-e102572b066d",
+          "migrations_dir": "./drizzle/"
+        }
+      ]
+    }
+  }
 }
