Fixed, suppressed, and disabled some lints that seem less useful to us right now.

--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,10 @@
   "linter": {
     "enabled": true,
     "rules": {
+      "a11y": {
+        "noStaticElementInteractions": "warn",
+        "useKeyWithClickEvents": "warn"
+      },
       "recommended": true
     }
   },
