--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.0",
+    "@types/clean-css": "^4.2.11",
     "@types/node": "^24.9.1",
+    "clean-css": "^5.3.3",
     "drizzle-kit": "^0.31.6",
     "vitest": "^4.0.5",
     "wrangler": "^4.45.0"
