--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/oswald": "^5.2.8",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "arctic": "^3.7.0",
     "astro": "^5.15.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
