--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -44,7 +44,10 @@
    * Environment Variables
    * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
    */
-  // "vars": { "MY_VARIABLE": "production_value" }
+  "vars": { 
+    "DEV": false,
+    "PROD_URL": "https://makemeet.cloudcs484-0.workers.dev"
+  },
   /**
    * Note: Use secrets to store sensitive data.
    * https://developers.cloudflare.com/workers/configuration/secrets/
