Format wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -107,7 +107,8 @@
           "binding": "css-bucket",
           "bucket_name": "makemeet-public-css-store"
         }
-      ],"name": "makemeet"
+      ],
+      "name": "makemeet"
     }
   }
 }
